--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 	"devDependencies": {
 	    "gulp-qunit": "~0.2.1",
 	    "gulp-util": "~2.2.14",
-	    "gulp": "~3.5.1"
+	    "gulp": "~3.5.1",
+	    "d3": "~4.4.0",
+	    "moment": "~2.17.1",
+	    "knockout": "~3.4.1",
+	    "jquery": "~3.1.1"
 	}
 }
